# wifiperson

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  mainwindow.cpp  mainwindow.h  wifi_scanner.cpp  wifi_scanner.h  wifi_scanner_backend.h  wifi_scanner_linux.cpp  wifi_scanner_windows.cpp  wifi_types.h  wifiman_prototype.pro  wifiperson.pro
.github/workflows/: build.yml
packaging/: io.github.wifiperson.wifiman-prototype.desktop  io.github.wifiperson.wifiperson.desktop  windows-installer.nsi
packaging/ifw/config/: config.xml
